[project]
name = "python-com-flask"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Tamicktom", email = "rickpokemon38@gmail.com"},
]
dependencies = ["flask>=3.1.2", "Flask-SQLAlchemy>=3.1.1", "Flask-Cors>=6.0.2", "Werkzeug>=3.1.5", "pydantic>=2.12.5", "pytest>=9.0.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "python src/main.py"

[tool.pdm]
distribution = false
